# Geminus

./: .clang-format  .gitignore  CMakeLists.txt
src/: connection.cpp  connection.cppm  connection.hpp  main.cpp  socket.cpp  socket.cppm  socket.hpp  socket.tpp  utilities.cpp  utilities.cppm  utilities.hpp
src/gemini/: gemini.cppm  gemini_errors.cppm
src/tls/: gtls_raii.cpp  gtls_raii.hpp  tls.cpp  tls.cppm  tls.hpp  tls_errors.cppm  tls_errors.hpp
