CMAKE_MINIMUM_REQUIRED(VERSION 3.31)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GNUTLS REQUIRED IMPORTED_TARGET gnutls)

PROJECT(Geminus VERSION 1.0)

ADD_EXECUTABLE(Geminus ${HEADERS} ${SOURCES})
TARGET_SOURCES(Geminus PRIVATE src/main.cpp)
TARGET_SOURCES(Geminus PRIVATE
  FILE_SET modules TYPE CXX_MODULES FILES
  src/tls/tls.cppm
  src/tls/tls_errors.cppm
  src/utilities.cppm
  src/socket.cppm
  src/connection.cppm
)
TARGET_COMPILE_OPTIONS(Geminus PUBLIC -Wall -Wextra -Werror)
TARGET_LINK_LIBRARIES(Geminus PRIVATE ${GNUTLS_LINK_LIBRARIES})
TARGET_COMPILE_OPTIONS(Geminus PUBLIC ${GNUTLS_CFLAGS})
