CMAKE_MINIMUM_REQUIRED(VERSION 3.31)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "d0edc3af-4c50-42ea-a356-e2862fe7a444")
SET(CMAKE_CXX_STANDARD_REQUIRED OFF)
SET(CMAKE_CXX_MODULE_STD 1)

if(NOT CMAKE_BUILD_TYPE)
  Set(CMAKE_BUILD_TYPE Release)
endif()

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GNUTLS REQUIRED IMPORTED_TARGET gnutls)

PROJECT(Geminus VERSION 1.0 LANGUAGES CXX)

ADD_EXECUTABLE(Geminus ${HEADERS} ${SOURCES})
TARGET_SOURCES(Geminus PRIVATE src/main.cpp)
TARGET_SOURCES(Geminus PRIVATE
  FILE_SET modules TYPE CXX_MODULES FILES
  src/tls/tls.cppm
  src/tls/tls_errors.cppm
  src/utilities.cppm
  src/socket.cppm
  src/connection.cppm
)
TARGET_COMPILE_OPTIONS(Geminus PUBLIC -Wall -Wextra -Werror)
TARGET_LINK_LIBRARIES(Geminus PRIVATE ${GNUTLS_LINK_LIBRARIES})
TARGET_COMPILE_OPTIONS(Geminus PUBLIC ${GNUTLS_CFLAGS})
